# babytroc

./: .gitignore  README.md  cache.md  compose-test.yaml  compose.yaml  endpoints.md  notes.md  run.sh  schemes.md  test.sh  todo.md
api/: .graphifyignore  CLAUDE.md  Dockerfile  alembic.ini  entrypoint.sh  main.py  mise.toml  notes.md  pyproject.toml  requirements.txt  seed.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 16e479c62349_add_report_tables.py  1e7d0576a6ff_add_user_tables.py  22a533ebcf12_add_extensions.py  2308ae67cf21_add_auth_tables.py  437e3a95060b_add_users_items_loans_requests.py  46e4ae20e795_add_functions.py  49ba9ac4237e_add_chat_tables.py  4c21e357351c_add_extensions.py  4e448b380021_add_region_tables.py  4f2e8642cffe_item_image_many_to_many_relationship.py  5b5c5a10390e_add_category_tables.py  5fd696534ab9_add_loan_tables.py  6ad2aafcd197_add_disabled_column_to_user.py  9984a44906d2_add_item_tables.py  a1b2c3d4e5f6_add_triggers.py  b657e37b3704_drop_notify_chat_members_new_message_.py  d5f03f0ce371_add_tables.py
api/app/: __init__.py  app.py  cache.py  cache_keys.py  config.py  database.py  email.py  enums.py  main.py  pubsub.py
api/app/babytroc.egg-info/: SOURCES.txt  top_level.txt
api/app/clients/: __init__.py  cache.py  redis.py
api/app/domain/: __init__.py  item.py  star.py
api/app/domains/: __init__.py
api/app/errors/: __init__.py  auth.py  base.py  category.py  chat.py  exception.py  handler.py  image.py  item.py  like.py  loan.py  region.py  save.py  user.py
api/app/infrastructure/: cache.py  cache_client.py  database.py  email_report.py  events.py  pubsub.py  redis.py  storage.py
api/app/models/: __init__.py  auth.py  base.py  chat.py  item.py  loan.py  report.py  user.py
api/app/schemas/: .null-ls_733718_base.py  __init__.py  base.py  chat.py  item.py  loan.py  pubsub.py  query.py  region.py  report.py  user.py  utils.py  websocket.py
api/app/services/: __init__.py  auth.py  chat.py  item.py  liked.py  loan.py  saved.py  user.py  utils.py
api/app/shared/: enums.py  filters.py  hash.py  image.py  pagination.py  schemas.py
api/app/utils/: __init__.py  hash.py  image.py  pagination.py
api/babycli/: __main__.py  _utils.py  check.py  config.py  danger.py  db.py  lint.py  server.py  setup.py  stats.py  user.py
api/babytroc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/db/: __init__.py  core.py  items.py  loans.py  models.py  users.py
api/graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
api/routers/: items.py
api/scripts/: check_domain_boundaries.py
api/seed/: __main__.py  categories.py  config.py  database.py  items.py  regions.py  users.py  validators.py
api/seed/data/: data.json
api/src/babycli/: __init__.py  _utils.py  boundaries.py  cache.py  check.py  config.py  db.py  lint.py  logs.py  server.py  setup.py  stats.py  user.py
api/src/babytroc/: app.py  main.py
api/stubs/wonderwords/: __init__.pyi  cmdline.pyi  cmdline_parser.pyi  random_sentence.pyi  random_word.pyi
api/tests/: __init__.py  conftest.py  lorem.py  seed.py  test_api_images.py  test_api_items.py  test_api_requests.py  test_api_users.py  test_api_utils.py  test_auth.py  test_cache.py  test_cache_integration.py  test_cache_invalidation.py  test_cache_keys.py  test_chats.py  test_config.py  test_core.py  test_create_redis_client.py  test_edge_cases.py  test_image_config.py  test_image_errors.py  test_image_processing_dep.py  test_image_variants.py  test_item_images.py  test_items.py  test_loan_requests.py  test_loans.py  test_pagination_edge_cases.py  test_redis_config.py  test_report.py  test_s3_client.py  test_s3_config.py  test_users.py  test_utils.py  test_websocket.py  utils.py
api/tests/auth/: test_reset_antibot.py  test_session.py  test_signup_antibot.py
api/tests/babycli/: test_check.py  test_danger.py  test_redact_secrets.py  test_smoke.py  test_utils.py
api/tests/chat/: conftest.py  test_chat_non_text.py  test_chat_permissions.py  test_chat_read.py  test_chat_seen.py  test_chat_text.py
api/tests/chat_read/: conftest.py  test_chat_read.py
api/tests/fixtures/: antibot.py  app.py  categories.py  chat.py  clients.py  contact.py  database.py  items.py  loans.py  regions.py  s3.py  users.py  websockets.py
api/tests/image/: test_image_upload.py  test_image_upload_concurrency.py  test_image_upload_rate_limit.py  test_upload_image_service.py
api/tests/infrastructure/: test_cap.py  test_email_contact.py  test_events.py
api/tests/item/: conftest.py  test_item_availability.py  test_item_categories.py  test_item_create.py  test_item_create_antibot.py  test_item_delete.py  test_item_images.py  test_item_like.py  test_item_like_operations.py  test_item_read.py  test_item_save.py  test_item_update.py
api/tests/loan/: conftest.py  test_loan_requests_create.py  test_loan_requests_read.py  test_loan_requests_update.py  test_loans_create.py  test_loans_read.py  test_loans_update.py
api/tests/shared/: test_antibot.py  test_errors.py  test_rate_limit.py
api/tests/user/: test_user_delete.py  test_user_read.py  test_user_stars.py  test_user_update.py
gui/: .gitignore  (+19 more)
(+1266 files in other folders)
