[project]
name = "babytroc"
version = "0.0.0"
description = "The babytroc API."
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]==0.*",
  "alembic>=1.15.2",
  "pillow>=11.2.1",
  "requests>=2.32.3",
  "pyjwt>=2.10.1",
  "uvicorn>=0.34.2",
  "websocket>=0.2.1",
  "broadcaster[redis] @ git+https://github.com/encode/broadcaster.git@6b3ea71d4f8fb038fa7d357a1fb3750d58ac614d",
  "redis[hiredis]>=5.0.0",
  "pydantic[email]",
  "fastapi-mail>=1.5.0",
  "bcrypt>=4.3.0",
  "posix-ipc>=1.3.2",
  "aiohttp>=3.13.2",
  "sqlalchemy>=2.0.38",
  "asyncpg-listen>=0.0.9",
  "asgi-lifespan==2.*",
  "aiohttp-asgi-connector>=1.1.0",
  "graphifyy>=0.4.1",
  "aioboto3>=13.0.0",
]

[project.scripts]
babycli = "babycli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "babycli"
module-root = "src"

[dependency-groups]
dev = [
  "asynczip>=1.0.7",
  "cyclopts>=3.17.0",
  "httpx>=0.28.1",
  "httpx-ws",
  "mypy>=1.15.0",
  "pylsp-mypy>=0.7.0",
  "pylyzer>=0.0.82",
  "pyright>=1.1.399",
  "pytest>=8.3.5",
  "pytest-asyncio>=1.3.0",
  "pytest-timeout>=2.3.1",
  "pytest-xdist[psutil]>=3.6.1",
  "ruff>=0.11.6",
  "tqdm>=4.67.1",
  "types-passlib>=1.7.7.20250408",
  "types-requests>=2.32.0.20250328",
  "types-sqlalchemy-utils>=1.1.0",
  "types-tqdm>=4.67.0.20250516",
  "types-aioboto3>=15.5.0",
  "unidecode>=1.4.0",
  "wonderwords>=2.2.0",
  "pytest-rerunfailures>=16.1",
]

[tool.ruff]
exclude = ["stubs"]
lint.extend-select = [
  "ASYNC",
  "B",
  "C",
  "E",
  "ERA",
  "EM",
  "F",
  "G",
  "I",
  "N",
  "PT",
  "PTH",
  "RUF",
  "S",
  "TCH",
  "TID",
  "UP",
  "W",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311"]
"tests/*.py" = ["S101", "S105", "S106", "S311"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Query",
]

[tool.pytest.ini_options]
timeout = 10
timeout_func_only = true
pythonpath = "src"
addopts = "-vv -n logical --dist loadscope --maxfail=1 --reruns 5 --reruns-delay 1"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
log_level = "ERROR"
markers = [
  "db_template(name): per-class template selector for the test DB clone",
]
